--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -37,6 +37,16 @@
       </div>
     </div>
 
+    <div class="col content-wrapper" style="background: beige">
+      <div  style="background-color: inherit;">
+        <div class=" vh-100 m-0" style="display: flex;flex-direction: column;" >
+          <div id="root3">
+            
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   </body>
